Bug 166035 - Dragging application links is broken
Summary: Dragging application links is broken
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-07-08 13:50 UTC by Frank Schmitt
Modified: 2008-07-08 14:48 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Frank Schmitt 2008-07-08 13:50:44 UTC
Version:            (using Devel)
Installed from:    Compiled sources

1) Right-Click in a folder view and say "Create new->Link to application"
2) Choose an icon and a command in the pop-up dialog
3) Drag and drop the newly created icon to a panel

The new icon has lost the icon and clicking it doesn't run the specified command, but opens the .desktop-File in kwrite
Comment 1 Marco Martin 2008-07-08 14:16:22 UTC
The problem is that folderview shows the desktop:/ url
that makes the if on line 112 of icon.cpp
if (m_url.isLocalFile() && KDesktopFile::isDesktopFile(m_url.toLocalFile())) {
to fail
Comment 2 Marco Martin 2008-07-08 14:48:46 UTC
SVN commit 829425 by mart:

try to use the most local url, makes easier to identify desktop files.

BUG: 166035


 M  +2 -1      icon.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=829425