try to use the most local url, makes easier to identify desktop files.

BUG: 166035

svn path=/trunk/KDE/kdebase/workspace/; revision=829425